<resources>
    <string name="app_name">BullPocket</string>
    <string name="BullPocket">Welcome BullPocket!</string>
    <string name="Bull">Bull</string>
    <string name="BullReg">BullReg</string>
    <string name="BullPocket1">BullPocket</string>
    <string name="LogOn">LOG IN</string>
    <string name="EnterButton">Enter</string>
    <string name="GoogleButton">GOOGLE</string>
    <string name="FacebookButton">FACEBOOK</string>
    <string name="FGPass">Forgot Password?</string>
    <string name="Reg">Register</string>
    <string name="User">User</string>
    <string name="Pass">Password</string>
    <string name="RegBeour">BE OUR MEMBER</string>
    <string name="RegName">Name:</string>
    <string name="RegEditName"> </string>
    <string name="RegEditNameAccount"> </string>
    <string name="RegEditPass"> </string>
    <string name="RegEditEmail"> </string>
    <string name="RegNameAccount">Account:</string>
    <string name="RegPassAccount">Password:</string>
    <string name="RegEmail">Email:</string>
    <string name="RegButton">REGISTER</string>
    <string name="tvTM">Transaction Management</string>
    <string name="tvSta">Statistics</string>
    <string name="tvWM">Account Management</string>
    <string name="tvAddWM">Add Account</string>
    <string name="tvDelWM">Delete Account</string>
    <string name="tvAccWM">Accounts</string>
    <string name="tvUOBWM">Update Original Balance</string>
    <string name="tvInTM">Income Management</string>
    <string name="tvOutTM">Outcome Management</string>
    <string name="tvHisTM">Transaction History</string>
    <string name="tvMakeSta">Make statistics</string>
    <string name="btnLOGOut">LOG OUT</string>
    <string name="action_settings">1</string>
    <string name="etAWName">Wallet Name:</string>
    <string name="etAWType">Wallet Type:</string>
    <string name="etAWCurrent">Current:</string>
    <string name="etAWMoney">Money:</string>
    <string name="btnAWSave">Save Wallet</string>
    <string name="ivAWCard">cb</string>
    <string name="ivAWWallet">w</string>
    <string name="ivAWSave">s</string>
    <string name="btnAdminView">View list users</string>
    <string name="button">Button</string>
    <string name="statistic_of_this_year">Statistic of this Year:</string>
    <string name="sotien">sotien</string>
    <string name="vnd">VND</string>
</resources>

