<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.com.dtt.ungdung16doana.Register.RegisterActivity">

    <EditText
        android:id="@+id/etAWEmail"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/RegEditEmail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="48dp"/>

    <EditText
        android:id="@+id/etAWPassword"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/RegEditPass"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="48dp"/>

    <EditText
        android:id="@+id/editTNameAccount"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/RegEditNameAccount"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="48dp"/>

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/RegBeour"
        android:textSize="26sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="28dp"/>

    <EditText
        android:id="@+id/etAWName"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="335dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/RegEditName"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="48dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="10dp"
        android:text="@string/RegEmail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="225dp"
        android:layout_marginLeft="10dp"
        android:text="@string/RegPassAccount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:layout_marginLeft="10dp"
        android:text="@string/RegNameAccount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:layout_marginLeft="10dp"
        android:text="@string/RegName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"

        android:layout_marginBottom="68dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="114dp"
        android:text="@string/RegButton"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="83dp"
        android:layout_height="93dp"
        android:layout_marginRight="248dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/BullReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bullreg" android:layout_marginEnd="248dp"/>

</android.support.constraint.ConstraintLayout>
