<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.com.dtt.ungdung16doana.AfterLogOn.Account.AddAccountActivity">

    <EditText
        android:id="@+id/edittextAWMoney1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvAWMoney1"
        android:layout_marginRight="62dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:inputType="textEmailAddress|numberDecimal"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="62dp"/>

    <TextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etAWName1"
            android:layout_alignStart="@+id/etAWName1"

            android:text="@string/tvAddWM"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginRight="69dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="69dp" />

        <EditText
            android:id="@+id/etAWName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_alignBaseline="@+id/tvAWWalletName1"
            android:layout_alignBottom="@+id/tvAWWalletName1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="2dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="2dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="122dp"/>

        <TextView
            android:id="@+id/tvAWMoney1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/etAWMoney"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAWCurrent1" />

        <TextView
            android:id="@+id/tvAWCurrent1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/etAWCurrent"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAWWalletType1" />

        <TextView
            android:id="@+id/tvAWWalletType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/etAWType"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAWWalletName1" />

    <TextView
        android:id="@+id/tvAWWalletName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/etAWName"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"/>

    <ImageView
        android:id="@+id/ivBull1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/etAWName1"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:contentDescription="@string/Bull"
        app:layout_constraintBottom_toTopOf="@+id/tvAWWalletName1"
        app:layout_constraintRight_toLeftOf="@+id/tvAdd"
        app:srcCompat="@drawable/bullreg"/>

        <ImageView
            android:id="@+id/ivBankCard1"
            android:layout_width="99dp"
            android:layout_height="86dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/ivAWCard"
            app:srcCompat="@drawable/bankcard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/ivWallet1"
            android:layout_width="99dp"
            android:layout_height="85dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/ivAWWallet"
            app:srcCompat="@drawable/vi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/ivBankCard1"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            />

        <ImageView
            android:id="@+id/ivSave1"
            android:layout_width="95dp"
            android:layout_height="84dp"
            android:contentDescription="@string/ivAWSave"
            app:srcCompat="@drawable/saving"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/btnAWSave1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/btnAWSave"
            android:layout_above="@+id/ivWallet1"
            android:layout_alignLeft="@+id/edittextAWMoney1"
            android:layout_alignStart="@+id/edittextAWMoney1"
            tools:ignore="MissingConstraints,RtlHardcoded"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="357dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/btnAWBack"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="Back"
        android:layout_above="@+id/ivWallet1"
        android:layout_alignLeft="@+id/edittextAWMoney1"
        android:layout_alignStart="@+id/edittextAWMoney1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="357dp"
        tools:ignore="HardcodedText,RtlHardcoded"/>

    <Spinner
        android:id="@+id/spinnerWalletType"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginRight="62dp"
        android:layout_marginTop="180dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"/>
    <Spinner
        android:id="@+id/spinnerCurrent"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginRight="62dp"
        android:layout_marginTop="245dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"/>

</android.support.constraint.ConstraintLayout>
